tests/baselines/reference/nestedIfStatement.errors.txt
nestedIfStatement.ts(3,12): error TS2869: This expression is always truthy. Did you mean to test something else?
nestedIfStatement.ts(4,12): error TS2869: This expression is always truthy. Did you mean to test something else?


==== nestedIfStatement.ts (2 errors) ====
    if (0) {
    } else if (1) {
    } else if (2) {
               ~
!!! error TS2869: This expression is always truthy. Did you mean to test something else?
    } else if (3) {
               ~
!!! error TS2869: This expression is always truthy. Did you mean to test something else?
    } else {
    }